Refactoring: Transaction Queries renaming and added Filter for Driver, Interval and Type Codes